--- a/.infastructure/Jenkinsfile
+++ b/.infastructure/Jenkinsfile
@@ -23,7 +23,11 @@ pipeline {
       }
       steps {
         dir('.infastructure') {
-          sh 'terraform init -input=false'
+          sh '''
+            export AWS_ACCESS_KEY_ID=$AWS_CREDS_USR
+            export AWS_SECRET_ACCESS_KEY=$AWS_CREDS_PSW
+            terraform init -input=false
+          '''
         }
       }
     }
