--- a/.infrastructure/Jenkinsfile
+++ b/.infrastructure/Jenkinsfile
@@ -21,6 +21,8 @@ pipeline {
         anyOf {
           // Build cho nhánh chính
           expression { return ['develop', 'staging', 'main'].contains(env.BRANCH_NAME) }
+          // Build cho nhánh feature
+          expression { env.BRANCH_NAME == '^feature\/.*'}
 
           // Build cho PR từ feature/* nếu có thay đổi hoặc changelog rỗng (build đầu tiên khi tạo PR lần đầu)
           allOf {
@@ -75,6 +77,7 @@ pipeline {
         anyOf {
           // Build cho nhánh chính
           expression { return ['develop', 'staging', 'main'].contains(env.BRANCH_NAME) }
+          expression { env.BRANCH_NAME == '^feature\/.*'}
 
           // Build cho PR từ feature/* nếu có thay đổi hoặc changelog rỗng (build đầu tiên khi tạo PR lần đầu)
           allOf {
