--- a/.infrastructure/Jenkinsfile
+++ b/.infrastructure/Jenkinsfile
@@ -22,7 +22,7 @@ pipeline {
           // Build cho nhánh chính
           expression { return ['develop', 'staging', 'main'].contains(env.BRANCH_NAME) }
           // Build cho nhánh feature
-          expression { env.BRANCH_NAME == '^feature\/.*'}
+          expression { env.BRANCH_NAME ==~ /^feature\/.*/ }
 
           // Build cho PR từ feature/* nếu có thay đổi hoặc changelog rỗng (build đầu tiên khi tạo PR lần đầu)
           allOf {
@@ -77,7 +77,7 @@ pipeline {
         anyOf {
           // Build cho nhánh chính
           expression { return ['develop', 'staging', 'main'].contains(env.BRANCH_NAME) }
-          expression { env.BRANCH_NAME == '^feature\/.*'}
+          expression { env.BRANCH_NAME ==~ /^feature\/.*/ }
 
           // Build cho PR từ feature/* nếu có thay đổi hoặc changelog rỗng (build đầu tiên khi tạo PR lần đầu)
           allOf {
