--- a/.infrastructure/Jenkinsfile
+++ b/.infrastructure/Jenkinsfile
@@ -131,7 +131,7 @@ pipeline {
               passwordVariable: 'AWS_SECRET_ACCESS_KEY'
             )
           ]) {
-            sh 'terraform plan -no-color -input=false'
+            sh 'terraform plan -no-color'
           }
         }
       }
