--- a/.infrastructure/Jenkinsfile
+++ b/.infrastructure/Jenkinsfile
@@ -60,28 +60,6 @@ pipeline {
       }
     }
 
-    stage('DEBUG Changeset') {
-  steps {
-    script {
-      def filesChanged = []
-      for (cs in currentBuild.changeSets) {
-        for (entry in cs.items) {
-          for (file in entry.affectedFiles) {
-            filesChanged << file.path
-          }
-        }
-      }
-
-      if (filesChanged.isEmpty()) {
-        echo "❌ No changes detected by Jenkins 'changeset'"
-      } else {
-        echo "✅ Changed files: ${filesChanged.join(', ')}"
-      }
-    }
-  }
-}
-
-
     stage('Terraform Format and Validate') {
       when {
         changeset ".infrastructure/**"
@@ -131,7 +109,7 @@ pipeline {
               passwordVariable: 'AWS_SECRET_ACCESS_KEY'
             )
           ]) {
-            sh 'terraform plan -no-color'
+            sh 'terraform plan -no-color -input=false'
           }
         }
       }
