--- a/.infrastructure/Jenkinsfile
+++ b/.infrastructure/Jenkinsfile
@@ -16,6 +16,29 @@ pipeline {
       }
     }
 
+    stage('Validate PR Rules') {
+      when {
+        changeRequest()
+      }
+      steps {
+        script {
+          echo "Validating PR: ${env.CHANGE_BRANCH} → ${env.CHANGE_TARGET}"
+
+          if (env.CHANGE_BRANCH ==~ /^feature\/.*/ && env.CHANGE_TARGET != 'develop') {
+            error "Không được phép merge feature/* vào ${env.CHANGE_TARGET}"
+          }
+
+          if (env.CHANGE_BRANCH == 'develop' && env.CHANGE_TARGET != 'staging') {
+            error "Không được phép merge develop vào ${env.CHANGE_TARGET}"
+          }
+
+          if (env.CHANGE_BRANCH == 'staging' && env.CHANGE_TARGET != 'main') {
+            error "Không được phép merge staging vào ${env.CHANGE_TARGET}"
+          }
+        }
+      }
+    }
+
     stage('Terraform Init') {
       when {
         anyOf {
