--- a/.infrastructure/Jenkinsfile
+++ b/.infrastructure/Jenkinsfile
@@ -16,6 +16,7 @@ pipeline {
       }
     }
 
+    // Check the correct PR branch creation
     stage('Validate PR Rules') {
       when {
         changeRequest()
