--- a/.infrastructure/Jenkinsfile
+++ b/.infrastructure/Jenkinsfile
@@ -46,7 +46,10 @@ pipeline {
           // Build cho nhánh chính
           expression { return ['develop', 'staging', 'main'].contains(env.BRANCH_NAME) }
           // Build cho nhánh feature
-          expression { env.BRANCH_NAME ==~ /^feature\/.*/ }
+          allOf {
+            changeRequest()
+            expression { env.CHANGE_BRANCH ==~ /^feature\/.*/ }
+          }
 
           // Build cho PR từ feature/* nếu có thay đổi hoặc changelog rỗng (build đầu tiên khi tạo PR lần đầu)
           allOf {
@@ -93,7 +96,10 @@ pipeline {
       when {
         anyOf {
           expression { return ['develop', 'staging', 'main'].contains(env.BRANCH_NAME) }
-          expression { env.BRANCH_NAME ==~ /^feature\/.*/ }
+          allOf {
+            changeRequest()
+            expression { env.CHANGE_BRANCH ==~ /^feature\/.*/ }
+          }
 
           // Build cho PR từ feature/* nếu có thay đổi hoặc changelog rỗng (build đầu tiên khi tạo PR lần đầu)
           allOf {
