--- a/.infrastructure/Jenkinsfile
+++ b/.infrastructure/Jenkinsfile
@@ -1,197 +1,197 @@
-pipeline {
-  agent { label 'AGENT-01' }
+// pipeline {
+//   agent { label 'AGENT-01' }
 
-  environment {
-    AWS_DEFAULT_REGION = 'eu-west-1'
-  }
+//   environment {
+//     AWS_DEFAULT_REGION = 'eu-west-1'
+//   }
 
-  tools {
-    terraform 'terraform50708'
-  }
+//   tools {
+//     terraform 'terraform50708'
+//   }
 
-  stages {
-    stage('Checkout Code') {
-      steps {
-        checkout scm
-      }
-    }
+//   stages {
+//     stage('Checkout Code') {
+//       steps {
+//         checkout scm
+//       }
+//     }
 
-    // Check the correct PR branch creation
-    stage('Validate PR Rules') {
-      when {
-        changeRequest()
-      }
-      steps {
-        script {
-          echo "Validating PR: ${env.CHANGE_BRANCH} → ${env.CHANGE_TARGET}"
+//     // Check the correct PR branch creation
+//     stage('Validate PR Rules') {
+//       when {
+//         changeRequest()
+//       }
+//       steps {
+//         script {
+//           echo "Validating PR: ${env.CHANGE_BRANCH} → ${env.CHANGE_TARGET}"
 
-          if (env.CHANGE_BRANCH ==~ /^feature\/.*/ && env.CHANGE_TARGET != 'develop') {
-            error "Không được phép merge feature/* vào ${env.CHANGE_TARGET}"
-          }
+//           if (env.CHANGE_BRANCH ==~ /^feature\/.*/ && env.CHANGE_TARGET != 'develop') {
+//             error "Không được phép merge feature/* vào ${env.CHANGE_TARGET}"
+//           }
 
-          if (env.CHANGE_BRANCH == 'develop' && env.CHANGE_TARGET != 'staging') {
-            error "Không được phép merge develop vào ${env.CHANGE_TARGET}"
-          }
+//           if (env.CHANGE_BRANCH == 'develop' && env.CHANGE_TARGET != 'staging') {
+//             error "Không được phép merge develop vào ${env.CHANGE_TARGET}"
+//           }
 
-          if (env.CHANGE_BRANCH == 'staging' && env.CHANGE_TARGET != 'main') {
-            error "Không được phép merge staging vào ${env.CHANGE_TARGET}"
-          }
-        }
-      }
-    }
+//           if (env.CHANGE_BRANCH == 'staging' && env.CHANGE_TARGET != 'main') {
+//             error "Không được phép merge staging vào ${env.CHANGE_TARGET}"
+//           }
+//         }
+//       }
+//     }
 
-    stage('Terraform Init') {
-      when {
-        anyOf {
-          // Build cho nhánh chính
-          expression { return ['develop', 'staging', 'main'].contains(env.BRANCH_NAME) }
-          // Build cho nhánh feature
-          expression { env.BRANCH_NAME ==~ /^feature\/.*/ }
+//     stage('Terraform Init') {
+//       when {
+//         anyOf {
+//           // Build cho nhánh chính
+//           expression { return ['develop', 'staging', 'main'].contains(env.BRANCH_NAME) }
+//           // Build cho nhánh feature
+//           expression { env.BRANCH_NAME ==~ /^feature\/.*/ }
 
-          // Build cho PR từ feature/* nếu có thay đổi hoặc changelog rỗng (build đầu tiên khi tạo PR lần đầu)
-          allOf {
-            changeRequest()
-            expression {
-              return ['develop', 'staging', 'main'].contains(env.CHANGE_TARGET)
-            }
-            anyOf {
-              changeset ".infrastructure/**"
-              // build lần đầu một PR 
-              allOf {
-                not { changeset ".infrastructure/**" }
-                expression { currentBuild.changeSets.size() == 0 }
-              }
-            }
-          }
-        }
-      }
-      steps {
-        dir('.infrastructure') {
-          withCredentials([
-            usernamePassword(
-              credentialsId: 'aws-creds',
-              usernameVariable: 'AWS_ACCESS_KEY_ID',
-              passwordVariable: 'AWS_SECRET_ACCESS_KEY'
-            )
-          ]) {
-            sh 'terraform init -input=false'
-          }
-        }
-      }
-    }
+//           // Build cho PR từ feature/* nếu có thay đổi hoặc changelog rỗng (build đầu tiên khi tạo PR lần đầu)
+//           allOf {
+//             changeRequest()
+//             expression {
+//               return ['develop', 'staging', 'main'].contains(env.CHANGE_TARGET)
+//             }
+//             anyOf {
+//               changeset ".infrastructure/**"
+//               // build lần đầu một PR 
+//               allOf {
+//                 not { changeset ".infrastructure/**" }
+//                 expression { currentBuild.changeSets.size() == 0 }
+//               }
+//             }
+//           }
+//         }
+//       }
+//       steps {
+//         dir('.infrastructure') {
+//           withCredentials([
+//             usernamePassword(
+//               credentialsId: 'aws-creds',
+//               usernameVariable: 'AWS_ACCESS_KEY_ID',
+//               passwordVariable: 'AWS_SECRET_ACCESS_KEY'
+//             )
+//           ]) {
+//             sh 'terraform init -input=false'
+//           }
+//         }
+//       }
+//     }
 
-    stage('Terraform Format and Validate') {
-      steps {
-        dir('.infrastructure') {
-          sh 'terraform fmt'
-          sh 'terraform validate -no-color'
-        }
-      }
-    }
+//     stage('Terraform Format and Validate') {
+//       steps {
+//         dir('.infrastructure') {
+//           sh 'terraform fmt'
+//           sh 'terraform validate -no-color'
+//         }
+//       }
+//     }
 
-    stage('Terraform Plan') {
-      when {
-        anyOf {
-          expression { return ['develop', 'staging', 'main'].contains(env.BRANCH_NAME) }
-          expression { env.BRANCH_NAME ==~ /^feature\/.*/ }
+//     stage('Terraform Plan') {
+//       when {
+//         anyOf {
+//           expression { return ['develop', 'staging', 'main'].contains(env.BRANCH_NAME) }
+//           expression { env.BRANCH_NAME ==~ /^feature\/.*/ }
 
-          // Build cho PR từ feature/* nếu có thay đổi hoặc changelog rỗng (build đầu tiên khi tạo PR lần đầu)
-          allOf {
-            changeRequest()
-            expression {
-              return ['develop', 'staging', 'main'].contains(env.CHANGE_TARGET)
-            }
-            anyOf {
-              changeset ".infrastructure/**"
-              // build lần đầu một PR
-              allOf {
-                not { changeset ".infrastructure/**" }
-                expression { currentBuild.changeSets.size() == 0 }
-              }
-            }
-          }
-        }
-      }
-      steps {
-        dir('.infrastructure') {
-          withCredentials([
-            usernamePassword(
-              credentialsId: 'aws-creds',
-              usernameVariable: 'AWS_ACCESS_KEY_ID',
-              passwordVariable: 'AWS_SECRET_ACCESS_KEY'
-            )
-          ]) {
-            sh 'terraform plan -no-color -input=false'
-          }
-        }
-      }
-    }
+//           // Build cho PR từ feature/* nếu có thay đổi hoặc changelog rỗng (build đầu tiên khi tạo PR lần đầu)
+//           allOf {
+//             changeRequest()
+//             expression {
+//               return ['develop', 'staging', 'main'].contains(env.CHANGE_TARGET)
+//             }
+//             anyOf {
+//               changeset ".infrastructure/**"
+//               // build lần đầu một PR
+//               allOf {
+//                 not { changeset ".infrastructure/**" }
+//                 expression { currentBuild.changeSets.size() == 0 }
+//               }
+//             }
+//           }
+//         }
+//       }
+//       steps {
+//         dir('.infrastructure') {
+//           withCredentials([
+//             usernamePassword(
+//               credentialsId: 'aws-creds',
+//               usernameVariable: 'AWS_ACCESS_KEY_ID',
+//               passwordVariable: 'AWS_SECRET_ACCESS_KEY'
+//             )
+//           ]) {
+//             sh 'terraform plan -no-color -input=false'
+//           }
+//         }
+//       }
+//     }
 
-    stage('Manual Approval') {
-      when {
-        allOf {
-          not { changeRequest() }
-          expression {
-            env.BRANCH_NAME == 'main'
-          }
-        }
-      }
-      steps {
-        timeout(time: 1, unit: 'HOURS') {
-          input message: 'Apply changes?'
-        }
-      }
-    }
+//     stage('Manual Approval') {
+//       when {
+//         allOf {
+//           not { changeRequest() }
+//           expression {
+//             env.BRANCH_NAME == 'main'
+//           }
+//         }
+//       }
+//       steps {
+//         timeout(time: 1, unit: 'HOURS') {
+//           input message: 'Apply changes?'
+//         }
+//       }
+//     }
 
-    stage('Terraform Apply') {
-      when {
-        allOf {
-          not { changeRequest() }
-          expression {
-            env.BRANCH_NAME == 'main'
-          }
-        }
-      }
-      steps {
-        dir('.infrastructure') {
-          withCredentials([
-            usernamePassword(
-              credentialsId: 'aws-creds',
-              usernameVariable: 'AWS_ACCESS_KEY_ID',
-              passwordVariable: 'AWS_SECRET_ACCESS_KEY'
-            )
-          ]) {
-            sh 'terraform apply --auto-approve'
-          }
-        }
-      }
-    }
+//     stage('Terraform Apply') {
+//       when {
+//         allOf {
+//           not { changeRequest() }
+//           expression {
+//             env.BRANCH_NAME == 'main'
+//           }
+//         }
+//       }
+//       steps {
+//         dir('.infrastructure') {
+//           withCredentials([
+//             usernamePassword(
+//               credentialsId: 'aws-creds',
+//               usernameVariable: 'AWS_ACCESS_KEY_ID',
+//               passwordVariable: 'AWS_SECRET_ACCESS_KEY'
+//             )
+//           ]) {
+//             sh 'terraform apply --auto-approve'
+//           }
+//         }
+//       }
+//     }
 
-    stage('Terraform Destroy') {
-      when {
-        allOf {
-          not { changeRequest() }
-          expression {
-            env.BRANCH_NAME == 'main'
-          }
-        }
-      }
-      steps {
-        dir('.infrastructure') {
-          withCredentials([
-            usernamePassword(
-              credentialsId: 'aws-creds',
-              usernameVariable: 'AWS_ACCESS_KEY_ID',
-              passwordVariable: 'AWS_SECRET_ACCESS_KEY'
-            )
-          ]) {
-            timeout(time: 1, unit: 'HOURS') {
-              input message: "Xác nhận destroy IaC?"
-            }
-            sh 'terraform destroy --auto-approve'
-          }
-        }
-      }
-    }
-  }
-}
+//     stage('Terraform Destroy') {
+//       when {
+//         allOf {
+//           not { changeRequest() }
+//           expression {
+//             env.BRANCH_NAME == 'main'
+//           }
+//         }
+//       }
+//       steps {
+//         dir('.infrastructure') {
+//           withCredentials([
+//             usernamePassword(
+//               credentialsId: 'aws-creds',
+//               usernameVariable: 'AWS_ACCESS_KEY_ID',
+//               passwordVariable: 'AWS_SECRET_ACCESS_KEY'
+//             )
+//           ]) {
+//             timeout(time: 1, unit: 'HOURS') {
+//               input message: "Xác nhận destroy IaC?"
+//             }
+//             sh 'terraform destroy --auto-approve'
+//           }
+//         }
+//       }
+//     }
+//   }
+// }
